realice cambios en carrito e hice funcional el boton de agregar producto al carrito

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -70,8 +70,12 @@
   ul {
     list-style: none;
     padding: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
   }
-  
   li {
     background-color: #ffffff;
     margin: 10px 0;
