--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -11,11 +11,11 @@
     <h2>{{product.name}}</h2>
     <p><strong>Precio:</strong> ${{product.price}}</p>
     <p><strong>Descripción:</strong> {{product.description}}</p>
-    <p><strong>Código:</strong> {{product.code}}</p> <!-- Si tienes este campo -->
+    <p><strong>Código:</strong> {{product.code}}</p> 
     <p><strong>ID:</strong> {{product._id}}</p>
   </div>
 
-  <a href="/">Volver a la lista de productos</a>
+  <a href="/productos">Volver a la lista de productos</a>
 
   <script src="/socket.io/socket.io.js"></script>
 </body>
