--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -92,6 +92,10 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
+
+  .verCarrito {
+    background-color: red;
+  }
   input, button {
     padding: 10px;
     margin: 10px 0;
